# tubecli

./: .gitignore  README.md  pyproject.toml  refactor_extensions.py  refactor_extensions_2.py  refactor_stragglers.py  requirements.txt  test_skill_creation.py
.agents/skills/: SKILL.md
.agents/workflows/: setup.md
docs/: doc-v1 - Copy.html  index.html
tubecli/: __init__.py  config.py  main.py  test_install.py
tubecli/api/: server.py
tubecli/cli/: agent_cmd.py  api_cmd.py  extension_cmd.py  init_cmd.py  plugin_cmd.py  skill_cmd.py  workflow_cmd.py
tubecli/core/: agent.py  ai_generator.py  brain.py  extension_manager.py  ollama_utils.py  plugin_manager.py  scheduler.py  skill.py  workflow_engine.py
tubecli/extensions/browser/: SKILL.md  __init__.py  ai_engine.js  browser_manager.js  commands.py  extension.py  open.js  process_manager.py  profile_manager.py  routes.py
tubecli/extensions/cloud_api/: SKILL.md  __init__.py  commands.py  extension.py  routes.py
tubecli/extensions/downloader/: __init__.py  extension.py  routes.py
tubecli/extensions/market/: __init__.py  extension.py  routes.py
tubecli/extensions/multi_agents/: SKILL.md  __init__.py  (+3 more)
tubecli/i18n/: __init__.py  en.py  vi.py
tubecli/nodes/: __init__.py  ai_node.py  api_request_node.py  browser_node.py  custom_node.py  google_auth_node.py  google_sheets_node.py  if_node.py  json_parser_node.py  loop_node.py  merge_node.py  model_agent_node.py  output_node.py  python_code_node.py  registry.py  run_command_node.py  switch_node.py  text_input_node.py
tubecli/skills/: default_skills.py
(+59 files in other folders)
